--- a/windows/tv/history.txt
+++ b/windows/tv/history.txt
@@ -1,10 +1,10 @@
-国土安全,11088,S02E07
-复仇,10979,S02E07
+Homeland,11088,S02E07
+Revenge,10979,S02E07
 BigBang,11005,S06E07
-破釜沉舟,27260,S01E06
-危机边缘,11013,S06E06
-疑犯追踪,11009,S02E06
-鬼楼契约,27156,S01E07
-猎杀行动,28111,S01E01
+LastResort,27260,S01E06
+Fringe,11013,S06E06
+PersonOfInterest,11009,S02E06
+666ParkAvenue,27156,S01E07
+Hunted,28111,S01E01
 
 TODO
